2001-12-18  Francois Dechelle  <dechelle@lipari.ircam.fr> and Peter Hanappe <peter@hanappe.com>

	* integrated client library in jMax sources. Reorganized it in order to have
	different connection types. Added pipe connection. Changed accordingly fts/client.c

2001-12-17  Norbert Schnell  <schnell@ligeti.ircam.fr>

	* implemented MIDI file export for note and midievent tracks in track of package sequence
	* reviewed behaiviour of import and export messages to track and sequence

2001-12-15  Norbert Schnell  <schnell@ligeti.ircam.fr>

	* adjusted objects of sequence package
	* introduced track of midievents with import from MIDI files (todo: export)
	* added void type to track and removed midival
	* moved seqplay to play
	* moved seqrec to record
	* new (experimental) object dumpfile in package data 
	* introduced keep property to sequence and track
	* implemented templates ldeco and lcomp as classes in package lists

2001-12-07  Norbert Schnell  <schnell@ligeti.ircam.fr>

	* introduced fts_dumper_t as general mechanism for save and dump (adapted saver.c)
	* implemented dump for all data classes in packages data and sequence
	* moved check of keep property to bmax saver
	* changed preset: now is based on set_from_instance method and dumper (for saving)
	* moved all method declarations to fts_method_define_varargs

2001-11-29  Norbert Schnell  <schnell@ligeti.ircam.fr>

	* removed timer from time.c and added timebase scheduling functions
	* added object referencing to client updates
	
2001-11-20  Norbert Schnell  <schnell@ligeti.ircam.fr>

	* rewrote midiport and midifile modules based on new fts_midievent_t class
	* rewrote timing system bases on fts_timebase_t and fts_timer_t (doc needs to be added to time.h)
	* adapted classes using alarms, timers, and clocks (to be tested)

2001-10-29  Norbert Schnell  <schnell@ligeti.ircam.fr>

	* listelement.c: bug fixed (crashed for negative indices)

2001-10-26  Norbert Schnell  <schnell@ligeti.ircam.fr>
