@@ -1,3 +1,8 @@
+2001-12-18  Norbert Schnell  <schnell@ligeti.ircam.fr>
+
+	* changed close strategy for patcher window (now destroys graphical instances)
+	* renamed interface messages for graphical editors (fts_s_openEditor, ...)
+
 2001-12-18  Francois Dechelle  <dechelle@lipari.ircam.fr> and Peter Hanappe <peter@hanappe.com>
 
 	* integrated client library in jMax sources. Reorganized it in order to have
